menu header is fixed. -core: fixed function rolopress_default_menu wrapped in div -default: styled menu after WP admin
git-svn-id: http://svn.sudarmuthu.com/rolopress/rolopress-core/trunk@7 38a0677f-509c-40db-b594-c9751fff4674

--- a/style.css
+++ b/style.css
@@ -61,20 +61,25 @@ body {
 .skip-link {
 	display: none;
 }
-.menu ul {
+#menu ul {
 	list-style: none;
 	margin: 0;
 }
-.menu ul ul {
+#menu ul ul {
 	display: none;
 }
-.menu li {
+#menu li {
 	display: inline;
 }
-.menu a {
+#menu a {
 	display: block;
 	float: left;
 	padding:0 10px 0 0;
+}
+
+
+#menu h3 {
+    display: none;
 }
 
 
